--- a/layouts/partials/footer1.html
+++ b/layouts/partials/footer1.html
@@ -1,5 +1,5 @@
 {{ "<!-- ENTERING partial footer1.html -->" | safeHTML }}
-<footer class="footer notification is-dark is-marginless">
+<footer class="footer notification is-dark is-marginless is-radiusless">
   <div class="container">
      <div class="columns">
 
