Various tweaks to home, tile backgrounds, is-shaded, testimonials

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -88,8 +88,8 @@
       <div class="tile is-ancestor">
         <div class="tile is-vertical is-9">
           <div class="tile">
-            <div class="tile is-parent">
-              <article class="tile is-child box">
+            <div class="tile is-parent is-shaded">
+              <article class="tile is-child box notification is-esolia-blue-4">
                 <p class="title">{{ i18n "topsectionvideo" }}</p>
                 <p class="is-italic">{{ i18n "topsectionvideosub" }}</p>
                      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/78135284" style="position:absolute;left:0;top:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
@@ -97,30 +97,29 @@
             </div>
             <div class="tile is-8 is-vertical">
               <div class="tile">
-                <div class="tile is-parent">
+                <div class="tile is-parent is-shaded">
                   <article class="tile is-child box">
                     <figure class="image">
                       <img src="/img/eSolia-Logo-Flat-2015.png"></img>
                     </figure>
                   </article>
                 </div>
-                <div class="tile is-parent">
-                  <article class="tile is-child box">
-                    <p class="title">Six</p>
-                    <p class="subtitle">Subtitle</p>
-                  </article>
+                <div class="tile is-parent is-shaded">
+                   <article class="tile is-child box hero-bg-networkswitch">
+                   </article>
                 </div>
               </div>
-              <div class="tile is-parent">
-                <article class="tile is-child box">
-                  <p class="title">Eight</p>
-                  <p class="subtitle">Subtitle</p>
+              <div class="tile is-parent is-shaded">
+                <article class="tile is-child box notification is-esolia-yellow-1">
+                  <p class="title has-text-esolia-blue-0">{{ i18n "topsectiontestimonial" }}</p>
+                  <p class="subtitle is-italic has-margin-r-m"><span class="icon has-text-esolia-blue-1"><i class="fas fa-quote-left"></i></span>{{ i18n "toptestimoninal1" }}</p>
+                  <p class="subtitle is-italic has-margin-l-m"><span class="icon has-text-esolia-secondary-1-1"><i class="fas fa-quote-left"></i></span>{{ i18n "toptestimoninal2" }}</p>
                 </article>
               </div>
             </div>
           </div>
           <div class="tile">
-            <div class="tile is-8 is-parent">
+            <div class="tile is-8 is-parent is-shaded">
               <article class="tile is-child box">
                 <p class="title">{{ i18n "topsectioninfo" }}</p>
                 <p class="subtitle">{{ i18n "topsectioninfosub" }}</p>
@@ -136,24 +135,24 @@
                 　</div>
               </article>
             </div>
-            <div class="tile is-parent">
-              <article class="tile is-child box hero-bg-totsukabridge">
-                <p class="title">Ten</p>
-                <p class="subtitle">Subtitle</p>
-                <div class="content">
-                  <p>List Info higher on page? Find places for quotes, specials like Denphone or Codebook (carousel?). Latest Longhand posts, on both home and news page. News = the short ones, blog = long ones. Tone friendly on short. </p>
-                </div>
+            <div class="tile is-parent is-shaded">
+              <article class="tile is-child box hero-bg-esoliaofficeexterior">
               </article>
             </div>
           </div>
         </div>
-        <div class="tile is-parent">
+        <div class="tile is-parent is-shaded">
           <article class="tile is-child box">
             <div class="content">
               <p class="title">{{ i18n "topsectionpledge" }}</p>
               <p class="subtitle">{{ i18n "topsectionpledgesub" }}</p>
               <div class="content">
                 <p>{{ i18n "topsectionpledgetext" | safeHTML | markdownify }}</p>
+
+                <figure class="image is-256x256">
+<img class="" data-caption="eSolia Logo" alt="Graphic of the eSolia Chicklet Logo" src="/img/eSolia-Chicklet-Color.svg" >
+</figure>
+
               </div>
             </div>
           </article>
@@ -161,16 +160,11 @@
       </div>
 
       <div class="tile is-ancestor">
-        <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="title">Twelve</p>
-            <p class="subtitle">Subtitle</p>
-            <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut.</p>
-            </div>
+        <div class="tile is-parent is-shaded">
+          <article class="tile is-child box hero-bg-atagotunnel">
           </article>
         </div>
-        <div class="tile is-parent is-6">
+        <div class="tile is-parent is-6 is-shaded">
           <article class="tile is-child box">
             <p class="title">{{ i18n "topsectionprojects" }}</p>
             <p class="subtitle">{{ i18n "topsectionprojectssub" }}</p>
@@ -186,13 +180,8 @@ data-url="/ev-3456939/db/15331/view.aspx"></script>
             </div>
           </article>
         </div>
-        <div class="tile is-parent">
-          <article class="tile is-child box">
-            <p class="title">Fourteen</p>
-            <p class="subtitle">Subtitle</p>
-            <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut.</p>
-            </div>
+        <div class="tile is-parent is-shaded">
+          <article class="tile is-child box hero-bg-templecolfull">
           </article>
         </div>
       </div>
