Change footer svg wave color to esolia blue

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -271,7 +271,7 @@ data-url="/ev-3456939/db/15331/view.aspx"></script>
         <rect width="100%" height="100%" stroke="#F5F5F5" fill="#F5F5F5"/>
 				<defs>
 					<linearGradient id="aa" x1="50%" x2="50%" y1="-10.959%" y2="100%">
-						<stop stop-color="#16b2c7" stop-opacity=".80" offset="0%"/>
+						<stop stop-color="#017DDD" stop-opacity=".80" offset="0%"/>
 						<stop stop-color="#fff" offset="100%"/>
 					</linearGradient>
 					<linearGradient id="cc" x1="50%" x2="50%" y1="-10.959%" y2="100%">
