Set body to background $dark, since gap was visible at bottom of inners

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -158,6 +158,10 @@ html {
    background-color: $light;
    }
 
+body {
+   background-color: $dark;
+   }
+
 section.bg-dark {
    background-color: $dark;
    }
