--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -34,7 +34,7 @@
   <div class="column is-main-content">
       <div class="box content is-size-5-desktop is-size-6-mobile has-margin-m has-padding-t-xxs">
         <p class="title is-5"><h1>{{ i18n "termsHeading" }}</h1></p>
-        <p class="subtitle is-italic">{{ i18n "termsThisSite" }}{{ .Title }}</p>
+        <p class="subtitle is-italic has-text-esolia-blue-2">{{ i18n "termsThisSite" }}{{ .Title }}</p>
 
          <p>
           {{ $data := .Data }}
