--- a/layouts/page/about.html
+++ b/layouts/page/about.html
@@ -40,7 +40,7 @@
   <div class="column is-main-content">
       <div class="box content is-size-5-desktop is-size-6-mobile has-margin-m has-padding-t-xxs">
         <p class="title is-5"><h1>{{ .Title }}</h1></p>
-        <p class="subtitle is-italic">{{ .Params.subtitle }}</p>
+        <p class="subtitle is-italic has-text-esolia-yellow-3">{{ .Params.subtitle }}</p>
         {{ .Content }}
         {{ if isset .Params "formcheckboxes" }}
           {{- partial "form-moreinfo.html" . -}}
