Attempt to style submit button for prodb

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -445,6 +445,9 @@ text-decoration: none;
 table.fs-grid div.markup p a:hover {
 color: $link-hover;
 }
+footer.div.ui-button[type=submit] {
+background-color: $esolia-blue-3;
+}
 
 // Search
 
