--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -191,31 +191,31 @@ data-url="/ev-3456939/db/15331/view.aspx"></script>
       <nav class="level">
         <div class="level-item has-text-centered">
           <div>
-            <p class="heading">Pros per account</p>
+            <p class="heading">{{ i18n "topstatspros" }}</p>
             <p class="title">2</p>
           </div>
         </div>
         <div class="level-item has-text-centered">
           <div>
-            <p class="heading">Critical Partners</p>
+            <p class="heading">{{ i18n "topstatspart" }}</p>
             <p class="title">12</p>
           </div>
         </div>
         <div class="level-item has-text-centered">
           <div>
-            <p class="heading">Principals' Years of Experience</p>
+            <p class="heading">{{ i18n "topstatsprin" }}</p>
             <p class="title">100</p>
           </div>
         </div>
         <div class="level-item has-text-centered">
           <div>
-            <p class="heading">Tickets Resolved Annually</p>
+            <p class="heading">{{ i18n "topstatstick" }}</p>
             <p class="title">3,000+</p>
           </div>
         </div>
         <div class="level-item has-text-centered">
           <div>
-            <p class="heading">Hours Booked over 5 Years</p>
+            <p class="heading">{{ i18n "topstatsbook" }}</p>
             <p class="title">60,000+</p>
           </div>
         </div>
