Added css from @yasuhito (thanks!) to allow is-overlay with link
Links on zoom icon and on the image itself.

Fixes #1

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -479,3 +479,13 @@ color: white;
             padding-left: 30px;
         }
     }
+
+// Gallery
+
+.carousel-navigation {
+  pointer-events: none;
+}
+
+.carousel-nav-left, .carousel-nav-right {
+  pointer-events: auto;
+}
