--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {{ with .Params.robotsdisallow }}<meta name="robots" content="noindex">{{ end }}
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
     <link rel="stylesheet" href="/css/main.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
@@ -18,8 +19,6 @@
     <script src="https://www.google.com/recaptcha/api.js?onload=tryInitCaptcha&render=explicit&hl=en"></script>
   {{ end }}
   {{ end }}
-
-
 
   </head>
   <body>
