Make success sidebar menu sort by weight in reverse, add all projects link
Fixes #30

--- a/layouts/page/successes.html
+++ b/layouts/page/successes.html
@@ -14,7 +14,7 @@
          <a class="is-hoverable{{ if $currentPage.IsMenuCurrent "successes" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}"><p class="menu-label has-text-esolia-secondary-1-1">{{ .Name }}</p></a>
           <ul class="menu-list-success">
           {{ if .HasChildren }}
-          {{ range .Children }}
+          {{ range .Children.Reverse }}
             <li><a class="is-hoverable{{ if $currentPage.IsMenuCurrent "successes" . }} is-active{{ end }}" href="{{ .URL | absLangURL }}">{{ .Name }}</a></li>
           {{ end }}
           {{ end }}
