Change "problem" to "challenge"

--- a/layouts/shortcodes/showsuccess.html
+++ b/layouts/shortcodes/showsuccess.html
@@ -45,16 +45,16 @@
   </tbody>
 </table>
 
-<h2>Problem</h2>
+<h2>Challenges</h2>
 {{ with (index . "Problem") }}{{ . | markdownify | safeHTML }}{{ end }}
 
-<h2>Solution</h2>
+<h2>Solutions</h2>
 {{ with (index . "Solution") }}{{ . | markdownify | safeHTML }}{{ end }}
 
 <h2>Benefits</h2>
 {{ with (index . "Benefits") }}{{ . | markdownify | safeHTML }}{{ end }}
 
-<h2>Technology</h2>
+<h2>Technologies</h2>
 {{ with (index . "Technology") }}{{ . | markdownify | safeHTML }}{{ end }}
 
 {{ end }}
@@ -103,7 +103,7 @@
   </tbody>
 </table>
 
-<h2>問題点</h2>
+<h2>チャレンジ</h2>
 {{ with (index . "Problem‡") }}{{ . | markdownify | safeHTML }}{{ end }}
 
 <h2>ソリューション</h2>
