Update css to match updated bulma carousel compo

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -482,10 +482,10 @@ color: white;
 
 // Gallery
 
-.carousel-navigation {
-  pointer-events: none;
-}
-
-.carousel-nav-left, .carousel-nav-right {
-  pointer-events: auto;
-}
+// .carousel-navigation {
+//   pointer-events: none;
+// }
+//
+// .carousel-nav-left, .carousel-nav-right {
+//   pointer-events: auto;
+// }
