Add public rss feeds on home and inner pages for info and project list
Fixes #34

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -128,9 +128,15 @@
                 　　{{- if eq .Site.Language.Lang "en" -}}
                       <script src="https://pro.dbflex.net/secure/embed.js"
                       data-url="/ev-3440630/db/15331/view.aspx"></script>
+                      <a class="" href="https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3461316&user=40863e67a24a41e281eac29548bc68b2">
+                      <span class="icon has-text-esolia-yellow-2"><i class="fas fa-rss-square"></i></span>
+                      </a>
                 　　{{- else -}}
                     　<script src="https://pro.dbflex.net/secure/embed.js"
                     data-url="/ev-3440631/db/15331/view.aspx"></script>
+                      <a class="" href="https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3461317&user=40863e67a24a41e281eac29548bc68b2">
+                      <span class="icon has-text-esolia-yellow-2"><i class="fas fa-rss-square"></i></span>
+                      </a>
                 　　{{- end -}}
                 　</div>
               </article>
@@ -173,9 +179,15 @@
           　　{{- if eq .Site.Language.Lang "en" -}}
                 <script src="https://pro.dbflex.net/secure/embed.js"
 data-url="/ev-3456938/db/15331/view.aspx"></script>
+                <a class="" href="https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3456957&user=40863e67a24a41e281eac29548bc68b2">
+                <span class="icon has-text-esolia-yellow-2"><i class="fas fa-rss-square"></i></span>
+                </a>
           　　{{- else -}}
               　<script src="https://pro.dbflex.net/secure/embed.js"
 data-url="/ev-3456939/db/15331/view.aspx"></script>
+                <a class="" href="https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3456963&user=40863e67a24a41e281eac29548bc68b2">
+                <span class="icon has-text-esolia-yellow-2"><i class="fas fa-rss-square"></i></span>
+                </a>
           　　{{- end -}}
             </div>
           </article>
