--- a/layouts/post/newsarchive.html
+++ b/layouts/post/newsarchive.html
@@ -58,9 +58,15 @@
           <div class="column" id="hideheader">
           　　<h3>{{ i18n "newsarchiveshortposts" }}</h3>
                 {{- if eq .Site.Language.Lang "en" -}}
+                <a class="" href="https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3461316&user=40863e67a24a41e281eac29548bc68b2">
+                <span class="icon has-text-esolia-yellow-2"><i class="fas fa-rss-square"></i></span>
+                </a>
                 <script src="https://pro.dbflex.net/secure/embed.js"
         data-url="/ev-3461316/db/15331/view.aspx"></script>
                 {{- else -}}
+                <a class="" href="https://pro.dbflex.net/secure/public/db/15331/rss.ashx?view=3461317&user=40863e67a24a41e281eac29548bc68b2">
+                <span class="icon has-text-esolia-yellow-2"><i class="fas fa-rss-square"></i></span>
+                </a>
                 <script src="https://pro.dbflex.net/secure/embed.js"
         data-url="/ev-3461317/db/15331/view.aspx"></script>
                 {{- end -}}
