Install fontawesome locally and bundle it in (hoping to fix edge)

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -5,6 +5,10 @@
 // You can easily customize Bulma with your own variables.
 // Just uncomment the following block to see the result.
 
+// 0. Import fontawesome SEEMS NOT NEEDED
+// @import "../../bower_components/fontawesome/svg-with-js/css/fa-svg-with-js.css";
+
+
 
 // 1. Import the initial variables and functions, so you can override
 @import "../../bower_components/bulma/sass/utilities/initial-variables";
