Try adding additional css from wikiki re is-fullheight for sidebar

--- a/src/bulma/custom/_sass/main.scss
+++ b/src/bulma/custom/_sass/main.scss
@@ -232,6 +232,7 @@ $backgrounds: (bg-templecolfull: '/img/eSolia-Cogley-Azabudai-to-Atago-Tokyo-201
   &.is-fullheight {
     min-height: calc(100vh - ( #{$navbar-height} - .75rem ) );
     max-height: calc(100vh - ( #{$navbar-height} - .75rem ) );
+    height: calc(100vh - ( #{$navbar-height} - .75rem ) );
     display: flex;
     flex-direction: row;
     justify-content: stretch;
