Resize flat white eSolia logo to 100px to fix #46

--- a/layouts/partials/nav-home.html
+++ b/layouts/partials/nav-home.html
@@ -2,7 +2,7 @@
 <nav class="navbar is-esolia-blue-0 has-shadow is-spaced">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ .Site.BaseURL }}">
-      <img src="/img/eSolia Logo - White Opt 1206.png" alt="eSolia Logo" >
+      <img src="/img/eSolia-Logo-White-Opt-100.png" alt="eSolia Logo" >
     </a>
     <div class="navbar-burger burger" data-target="navMenu">
       <span></span>
