Turned off async. Did not work to fix #47.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
     {{ with .Params.robotsdisallow }}<meta name="robots" content="noindex">{{ end }}
     <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
     <link rel="stylesheet" type="text/css" href="/css/main.min.css{{with getenv "MAINCSS_HASH"}}?v={{.}}{{end}}">
-    <script type="text/javascript" src="/js/main.min.js{{with getenv "MAINJS_HASH"}}?v={{.}}{{end}}" async></script>
+    <script type="text/javascript" src="/js/main.min.js{{with getenv "MAINJS_HASH"}}?v={{.}}{{end}}"></script>
     <script src="https://use.typekit.net/fwz4gtk.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
