Enable new privacy settings and re-enable google analytics
Use internal async template for it

Fixes #60

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,6 +24,7 @@
   {{ end }}
   {{ end }}
 
+  {{ template "_internal/google_analytics_async.html" . }}
   </head>
   <body>
     <!-- Code that all your templates share, like a header -->
