--- a/layouts/partials/modal1.html
+++ b/layouts/partials/modal1.html
@@ -57,12 +57,13 @@
               <br><br>
             <p class="is-italic">{{ i18n "eSoliaContactsMore" |markdownify }}</p>
             <br>
+            <p>{{ i18n "eSoliaMapBlurb" | safeHTML }}</p>
           </div>
 
           <br>
-          <p><div class="map-responsive">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.377084474057!2d139.75146199999998!3d35.667716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b933eb5098d%3A0xb799ee788fa28eb7!2seSolia+Inc.!5e0!3m2!1sen!2sjp!4v1434536695719" width="600" height="450" frameborder="0" style="border:0"></iframe>
-          </div></p>
+          <p><figure class="image is-16x9">
+            <a href="/img/eSolia-Map-16x9-3352px.png"><img src="/img/eSolia-Map-16x9-1200px.png"></a>
+          </figure></p>
         </section>
         <footer class="modal-card-foot">
           <button class="button modal-button" data-target="#modal">Cancel</button>
