Move google analytics codes to root of language blocks
Was under params and that did not work. Also now checking if drafts.

Continues #60

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,8 +23,9 @@
     <script type="text/javascript" src="/js/bulma-steps.min.js{{with getenv "BUSTJS_HASH"}}?v={{.}}{{end}}"></script>
   {{ end }}
   {{ end }}
-
+  {{ if not .Site.BuildDrafts }}
   {{ template "_internal/google_analytics_async.html" . }}
+  {{ end }}
   </head>
   <body>
     <!-- Code that all your templates share, like a header -->
