Convert vimeo to link instead of embed, and make shortcode
Use on greeting and home page

Fixes #61

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -92,7 +92,9 @@
               <article class="tile is-child box notification is-esolia-blue-4">
                 <p class="title">{{ i18n "topsectionvideo" }}</p>
                 <p class="is-italic">{{ i18n "topsectionvideosub" }}</p>
-                     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/78135284" style="position:absolute;left:0;top:0;width:100%;height:100%;" frameborder="0" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                <figure class="image is-16x9">
+                  <a href="https://vimeo.com/rickcogley/review/78135284/7fd60cd0ff" target="_blank"><img src="/img/eSolia-Video-Thumb-16x9-500px.png"></a>
+                </figure>
               </article>
             </div>
             <div class="tile is-8 is-vertical">
